<resources>
    <string name="app_name">Quiz App</string>
    <string name="name">Enter Name</string>
    <string name="answerhere">Input your answere here</string>
    <string name="question1">Which of the following is considered as a strong bond?</string>
    <string name="question2"> The fundamental unit of an atom is</string>
    <string name="question3">Name of physicist who discovered nucleus of atom is</string>
    <string name="question4"> Radioactive particles give off</string>
    <string name="question5">Symbol of Potassium is</string>
    <string name="question6">Valency of sodium is</string>
    <string name="question7">The Neutral particles present in the atom are called as</string>
    <string name="consent">Protons are Positively charged entities of an atom</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>



</resources>
